# pipeline-etl-scrapping

./: .pre-commit-config.yaml  .pylintrc  README.md  db.sql  pyproject.toml  requirements.txt  run.py
src/drivers/: html_collector.py  http_requester.py
src/drivers/interfaces/: html_collector.py  http_requester.py
src/drivers/mocks/: http_requester_mock.py
src/drivers/tests/: html_collector.py  http_requester.py
src/errors/: extract_error.py  load_error.py  transform_error.py
src/infra/: database_connector.py  database_repository.py  database_repository_test.py
src/infra/interfaces/: database_repository.py
src/main/: main_pipeline.py
src/stages/contracts/: transform_contract.py
src/stages/contracts/mocks/: extract_contract.py  transform_contract.py
src/stages/extract/: extract_html.py  extract_html_test.py
src/stages/load/: load_data.py  load_data_test.py
src/stages/transform/: transform_raw_data.py  transform_raw_data_test.py
